# realman-demo

./: .gitattributes  .gitignore  README.md  start_robot_system.sh
docs/: API_DOCUMENTATION.md  README.md
src/rmc_aida_l_ros1-develop/: LARGE_FILES_README.md  README.md
src/rmc_aida_l_ros1-develop/src/embodied_camera/: CMakeLists.txt  package.xml  ros1具身双臂机器人embodied_camera功能包详解.md
src/rmc_aida_l_ros1-develop/src/embodied_gazebo/: CMakeLists.txt  package.xml  ros1具身双臂机器人embodied_gazebo功能包详解.md
src/rmc_aida_l_ros1-develop/src/embodied_moveit/: .setup_assistant  CMakeLists.txt  package.xml  ros1具身双臂机器人embodied_moveit功能包详解.md
src/rmc_aida_l_ros1-develop/src/robot_description/: CMakeLists.txt  package.xml  ros1具身双臂机器人robot_description功能包详解.md
src/rmc_aida_l_ros1-develop/src/robot_description/launch/: load_robot.launch
src/rmc_aida_l_ros1-develop/src/robot_description/meshes/common/: r_link8.STL  r_link9.STL
src/rmc_aida_l_ros1-develop/src/robot_description/meshes/rm65/: l_link1.STL  l_link3.STL  l_link4.STL  l_link5.STL  r_link2.STL  r_link6.STL
src/rmc_aida_l_ros1-develop/src/robot_description/meshes/rm75/: l_link2.STL  l_link5.STL  l_link6.STL  r_link3.STL  r_link4.STL  r_link7.STL
src/rmc_aida_l_ros1-develop/src/robot_description/urdf/common/: body_head_platform.urdf.xacro  common_gazebo.xacro  woosh_agv.urdf.xacro
src/rmc_aida_l_ros1-develop/src/robot_description/urdf/end_effectors/grippers/: joint_rmg24.urdf.xacro  left_hand_rmg24.urdf.xacro  left_hand_rmg24_transmission.xacro  right_hand_rmg24.urdf.xacro  right_hand_rmg24_transmission.xacro
src/rmc_aida_l_ros1-develop/src/robot_description/urdf/end_effectors/hands/: joint.urdf.xacro  left_hand.urdf.xacro  right_hand.urdf.xacro
src/rmc_aida_l_ros1-develop/src/robot_description/urdf/rm65/: rm65_b_v_left.urdf.xacro  rm65_b_v_left_transmission.xacro  rm65_b_v_right.urdf.xacro  rm65_b_v_right_transmission.xacro
src/rmc_aida_l_ros1-develop/src/robot_description/urdf/rm75/: rm75_b_v_left.urdf.xacro  rm75_b_v_left_transmission.xacro  rm75_b_v_right.urdf.xacro  rm75_b_v_right_transmission.xacro
src/rmc_aida_l_ros1-develop/src/robot_description/urdf/robots/: embodied_dual_arms.urdf.xacro
src/rmc_aida_l_ros1-develop/src/task_planning/: CMakeLists.txt  README.md  README_execute_tasks.md  package.xml
src/rmc_aida_l_ros1-develop/src/task_planning/apis/: __init__.py  agv_client.py  arm_client.py  camera_client.py  gripper_client.py  lift_client.py
src/rmc_aida_l_ros1-develop/src/task_planning/launch/: camera_detection.launch  execute_tasks.launch
src/rmc_aida_l_ros1-develop/src/task_planning/scripts/: camera_detection.py  execute_tasks.py  log_joint_current.py
(+120 files in other folders)
